--- a/src/main/resources/gb/hello-view.fxml
+++ b/src/main/resources/gb/hello-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Button?>
-<GridPane fx:controller="gb.HelloController" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1"
+<GridPane fx:controller="gb.HelloController" prefHeight="720.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml/1"
           xmlns="http://javafx.com/javafx/17.0.2-ea" alignment="center" hgap="10" vgap="10">
     <padding>
         <Insets top="25" right="25" bottom="10" left="25"/>
@@ -17,14 +17,14 @@
 
     <Label text="User Name:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
 
-    <TextField GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+    <TextField fx:id="usernameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
     <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
 
     <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
     <HBox spacing="10" alignment="bottom_right" GridPane.columnIndex="1" GridPane.rowIndex="4">
-        <Button text="Sign In" onAction="#onHelloButtonClick"/>
+        <Button fx:id="loginButton" text="Sign In" onAction="#loginButtonClicked"/>
     </HBox>
 
     <Text fx:id="actionTarget" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
