--- a/src/main/resources/gb/dashboard.fxml
+++ b/src/main/resources/gb/dashboard.fxml
@@ -1,14 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="gb.DashboardController"
-            prefHeight="720.0" prefWidth="1280.0">
-
-</AnchorPane>
+<BorderPane fx:controller="gb.DashboardController" prefHeight="640.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+   <left>
+      <VBox alignment="TOP_CENTER" prefHeight="365.0" prefWidth="122.0" spacing="10.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button disable="true" mnemonicParsing="false" text="Serwery" />
+            <Button mnemonicParsing="false" text="Szafy rack" />
+            <Button mnemonicParsing="false" text="Laptopy" />
+            <Button mnemonicParsing="false" text="Monitory" />
+            <Button mnemonicParsing="false" text="Oprogramowanie" />
+            <Button mnemonicParsing="false" text="Zlecenia" />
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <padding>
+            <Insets top="10.0" />
+         </padding></VBox>
+   </left>
+   <top>
+      <Label text="Lista Serwerów" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+   </top>
+   <center>
+      <TableView prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <columns>
+          <TableColumn prefWidth="75.0" text="C1" />
+          <TableColumn prefWidth="75.0" text="C2" />
+        </columns>
+      </TableView>
+   </center>
+   <right>
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="addServerButton" alignment="TOP_RIGHT" contentDisplay="CENTER" mnemonicParsing="false" onAction="#addServerButtonClicked" text="Dodaj serwer">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets></Button>
+         </children>
+      </VBox>
+   </right>
+</BorderPane>
