--- a/src/main/resources/gb/add-rack-view.fxml
+++ b/src/main/resources/gb/add-rack-view.fxml
@@ -20,7 +20,7 @@
    <center>
       <GridPane prefHeight="400.0" prefWidth="600.0" BorderPane.alignment="CENTER">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="291.0" minWidth="120.0" prefWidth="180.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="291.0" minWidth="120.0" prefWidth="150.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="457.0" minWidth="120.0" prefWidth="200.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="457.0" minWidth="120.0" prefWidth="150.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="457.0" minWidth="10.0" prefWidth="200.0" />
@@ -32,11 +32,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -55,42 +51,15 @@
             <Label text="Czas amortyzacji:" GridPane.columnIndex="2" GridPane.rowIndex="4" />
             <Label text="Czy w użyciu" GridPane.rowIndex="3" />
             <Label text="Data montażu:" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-            <Label text="Liczba dysków:" GridPane.rowIndex="6" />
             <TextField GridPane.columnIndex="1" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin></TextField>
             <TextField GridPane.columnIndex="3" GridPane.rowIndex="4" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="6">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin></TextField>
             <RadioButton mnemonicParsing="false" selected="true" text="Tak" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <Label text="Ilość RAM:" GridPane.rowIndex="7" />
-            <Label text="Taktowanie procesora:" GridPane.rowIndex="8" />
             <Separator prefHeight="0.0" prefWidth="418.0" GridPane.columnSpan="2147483647" GridPane.rowIndex="5" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="7">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="8">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </TextField>
-            <TextField GridPane.columnIndex="3" GridPane.rowIndex="7" />
-            <Label text="Maksymalny RAM:" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-            <Label text="Pojemność dysków:" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-            <TextField GridPane.columnIndex="3" GridPane.rowIndex="6" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="9">
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </TextField>
-            <Label text="System operacyjny" GridPane.rowIndex="9" />
-            <Label text="Zainstalowane oprogramowanie" GridPane.rowIndex="10" />
-            <ToolBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="11">
+            <Label text="Serwery" GridPane.rowIndex="6" />
+            <ToolBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="7">
               <items>
                 <Button mnemonicParsing="false" text="Wybierz" />
                   <Button mnemonicParsing="false" text="Dodaj" />
@@ -98,7 +67,7 @@
                   <Button mnemonicParsing="false" text="Usuń" />
               </items>
             </ToolBar>
-            <ListView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="10" />
+            <ListView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="6" />
             <DatePicker GridPane.columnIndex="1">
                <opaqueInsets>
                   <Insets />
@@ -112,7 +81,7 @@
       </GridPane>
    </center>
    <top>
-      <Label text="Dodawanie serwera" BorderPane.alignment="CENTER">
+      <Label text="Dodawanie szafy rack" BorderPane.alignment="CENTER">
          <font>
             <Font size="18.0" />
          </font></Label>
