--- a/src/main/resources/gb/add-server-view.fxml
+++ b/src/main/resources/gb/add-server-view.fxml
@@ -5,15 +5,15 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gb.AddServerController">
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
    <bottom>
       <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER_RIGHT">
         <items>
-            <Button mnemonicParsing="false" text="Anuluj" />
-          <Button mnemonicParsing="false" text="Zapisz" />
+            <Button mnemonicParsing="false" onAction="#closeFormAction" text="Anuluj" />
+          <Button fx:id="serverSaveForm" mnemonicParsing="false" onAction="#validateForm" text="Zapisz" />
         </items>
       </ToolBar>
    </bottom>
@@ -35,8 +35,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -83,14 +82,14 @@
             <Label text="Maksymalny RAM:" GridPane.columnIndex="2" GridPane.rowIndex="7" />
             <Label text="Pojemność dysków:" GridPane.columnIndex="2" GridPane.rowIndex="6" />
             <TextField GridPane.columnIndex="3" GridPane.rowIndex="6" />
-            <TextField GridPane.columnIndex="1" GridPane.rowIndex="9">
+            <TextField GridPane.columnIndex="3" GridPane.rowIndex="8">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </TextField>
-            <Label text="System operacyjny" GridPane.rowIndex="9" />
-            <Label text="Zainstalowane oprogramowanie" GridPane.rowIndex="10" />
-            <ToolBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="11">
+            <Label text="System operacyjny" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+            <Label text="Zainstalowane oprogramowanie" GridPane.rowIndex="9" />
+            <ToolBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="10">
               <items>
                 <Button mnemonicParsing="false" text="Wybierz" />
                   <Button mnemonicParsing="false" text="Dodaj" />
@@ -98,8 +97,8 @@
                   <Button mnemonicParsing="false" text="Usuń" />
               </items>
             </ToolBar>
-            <ListView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="10" />
-            <DatePicker GridPane.columnIndex="1">
+            <ListView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="9" />
+            <DatePicker fx:id="serverPurchaseDate" GridPane.columnIndex="1">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
