--- a/src/main/resources/gb/rack-view.fxml
+++ b/src/main/resources/gb/rack-view.fxml
@@ -13,7 +13,7 @@
       <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER_RIGHT">
         <items>
             <Button fx:id="discardChanges" mnemonicParsing="false" onAction="#closeFormAction" text="Anuluj" />
-          <Button mnemonicParsing="false" text="Zapisz" />
+          <Button mnemonicParsing="false" onAction="#saveRackData" text="Zapisz" />
         </items>
       </ToolBar>
    </bottom>
@@ -62,7 +62,7 @@
             <Label text="Serwery" GridPane.rowIndex="7" />
             <ToolBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="8">
               <items>
-                  <Button mnemonicParsing="false" text="Dodaj" />
+                  <Button mnemonicParsing="false" text="Dodaj" onAction="#addRackServer"/>
                   <Button mnemonicParsing="false" text="Edytuj" />
                   <Button mnemonicParsing="false" text="Usuń" />
               </items>
