--- a/src/main/resources/gb/server-view.fxml
+++ b/src/main/resources/gb/server-view.fxml
@@ -81,7 +81,7 @@
       </GridPane>
    </center>
    <top>
-      <Label text="Dodawanie serwera" BorderPane.alignment="CENTER">
+      <Label text="Serwer" BorderPane.alignment="CENTER">
          <font>
             <Font size="18.0" />
          </font></Label>
